# nimf

./: .gitignore  .gitmodules  AUTHORS  BUILD.md  BUILD_GTK4.md  CHANGELOG.md  Changelog.md  DOCKER-BUILD.md  Makefile.am  NEWS  PKGBUILD  PKGBUILD.ko  README  README-ko.md  README.en.md  README.md  RPM-GPG-KEY-nimf  THANKS  autogen.sh  build_package.sh  build_packages.sh  configure.ac  configure~  generate_changelog.sh  install  meson.build  meson_options.txt  nimf.spec  test-arch-build.sh  test-workflow-locally.md  update-version.sh
agents/app-indicator/: Makefile.am  dasom-indicator.c  main.c  nimf-indicator.c
agents/standalone/: Makefile.am
daemon/: Makefile.am  dasom-context.c  dasom-context.h  dasom-daemon.c  dasom-daemon.h  main.c  nimf-daemon.c  nimf.c
daemon/IMdkit/: Makefile.am  i18nPtHdr.c
data/: Makefile.am  meson.build  nimf.conf
data/apparmor-abstractions/: Makefile.am  nimf
data/autostart/: Makefile.am  nimf-daemon.desktop  nimf.desktop
data/icons/: Makefile.am
data/im-config/: 23_nimf.conf  23_nimf.rc  70_dasom.rc  70_nimf.conf  70_nimf.rc  Makefile.am
data/imsettings/: Makefile.am  nimf.conf  nimf.conf.in
docs/: Makefile.am  hangul-keyboard-2.xml  meson.build  nimf-decl-list.txt  nimf-decl.txt  nimf-docs.xml  nimf-sections.txt  nimf-undocumented.txt  nimf-unused.txt  nimf.hierarchy  nimf.prerequisites  nimf.signals  nimf.types
docs/html/: NimfCandidatable.html  NimfEngine.html  NimfIM.html  NimfPreeditable.html  NimfServer.html  NimfService.html  NimfServiceIC.html  abstract-classes.html  annotation-glossary.html  api-index-full.html  deprecated-api-index.html  executables.html  index.html  interfaces.html  libnimf-api.html  nimf-events.html  nimf-key-syms.html  nimf-settings.html  nimf-types.html  nimf-utils.html  nimf.html  object-tree.html
docs/xml/: annotation-glossary.xml  api-index-deprecated.xml  api-index-full.xml  gtkdocentities.ent  nimf-candidatable.xml  nimf-doc.bottom  nimf-engine.xml  nimf-events.xml  nimf-im.xml  nimf-key-syms.xml  nimf-preeditable.xml  nimf-server.xml  nimf-service-ic.xml  nimf-service.xml  nimf-settings.xml  nimf-types.xml  nimf-utils.xml  nimf.xml  object_index.sgml  tree_index.sgml
indicator/: Makefile.am  nimf-indicator.c  org.nimf.indicator.gschema.xml
libdasom/: Makefile.am  dasom-agent.c  dasom-agent.h  dasom-candidate.c  dasom-candidate.h  dasom-connection.c  dasom-connection.h  dasom-context.c  dasom-context.h  dasom-daemon.c  dasom-daemon.h  dasom-engine.c  dasom-engine.h  dasom-english.c  dasom-english.h  dasom-enum-types.c.template  dasom-enum-types.h.template  dasom-events.c  dasom-events.h  dasom-im.c  dasom-im.h  dasom-key-syms.h  dasom-message.c  dasom-message.h  dasom-module-manager.c  dasom-module-manager.h  dasom-module.c  dasom-module.h  dasom-private.c  dasom-private.h  dasom-server.c  dasom-server.h  dasom-types.c  dasom-types.h  dasom.h  dasom.pc.in  org.freedesktop.Dasom.gschema.xml
libdasom/IMdkit/: XimProto.h  i18nIc.c  i18nMethod.c
libnimf/: Makefile.am  meson.build  nimf-agent.c  nimf-agent.h  nimf-candidatable.c  nimf-candidatable.h  nimf-candidate.c  nimf-candidate.h  nimf-client.c  nimf-client.h  nimf-connection.c  nimf-connection.h  nimf-context.c  nimf-context.h  nimf-engine.c  nimf-engine.h  nimf-english.c  nimf-english.h  nimf-enum-types.c.template  nimf-enum-types.h.template  nimf-events.c  nimf-events.h  nimf-im.c  nimf-im.h  nimf-key-syms.c  nimf-key-syms.h  nimf-marshalers.list  nimf-message-enum-types-private.h.template  nimf-message-enum-types.c.template  nimf-message-private.h  nimf-message.c  nimf-message.h  nimf-module-manager.c  nimf-module-manager.h  nimf-module-private.h  nimf-module.c  nimf-module.h  nimf-preeditable.c  nimf-private.c  nimf-private.h  (+20 more)
libnimf/client/: nimf-client.c  nimf-client.h  nimf-im.c  nimf-im.h
libnimf/server/: nimf-candidatable.c  nimf-candidatable.h  nimf-connection.c  nimf-connection.h  nimf-engine.c  nimf-engine.h  nimf-module-private.h  nimf-module.c  nimf-module.h  nimf-nim-im.c  nimf-nim-im.h  nimf-preeditable.c  nimf-preeditable.h  nimf-server-im.c  nimf-server-im.h  nimf-server-private.h  nimf-server.c  nimf-server.h  nimf-service-im.c  nimf-service-im.h  nimf-service.c  nimf-service.h
modules/: Makefile.am  meson.build
modules/clients/: Makefile.am
modules/clients/gtk/: Makefile.am  im-dasom.c  im-nimf-gtk4.c  im-nimf-gtk4.c.backup  im-nimf.c  meson.build  org.freedesktop.Dasom.clients.gtk.gschema.xml  org.nimf.clients.gtk.gschema.xml
modules/clients/qt4/: Makefile.am  im-dasom-qt4.cpp  im-nimf-qt4.cpp  meson.build  org.nimf.clients.qt4.gschema.xml
modules/clients/qt5/: Makefile.am  dasom.json  im-dasom-qt5.cpp  im-nimf-qt5.cpp  meson.build  nimf.json  org.nimf.clients.qt5.gschema.xml
modules/clients/qt6/: Makefile.am  im-nimf-qt6.cpp  nimf.json  org.nimf.clients.qt6.gschema.xml
modules/engines/: Makefile.am
modules/engines/dasom-english/: Makefile.am  dasom-english.c  dasom-english.h
modules/engines/dasom-jeongeum/: Makefile.am  dasom-jeongeum.c  dasom-jeongeum.h  org.freedesktop.Dasom.engines.jeongeum.gschema.xml
modules/engines/nimf-anthy/: Makefile.am  meson.build  nimf-anthy.c  org.nimf.engines.anthy.gschema.xml  org.nimf.engines.nimf-anthy.gschema.xml
modules/engines/nimf-chewing/: Makefile.am  nimf-chewing.c  org.nimf.engines.nimf-chewing.gschema.xml
modules/engines/nimf-jeongeum/: Makefile.am  nimf-jeongeum.c  org.nimf.engines.jeongeum.gschema.xml
modules/engines/nimf-libhangul/: Makefile.am  meson.build  nimf-libhangul.c  org.nimf.engines.libhangul.gschema.xml  org.nimf.engines.nimf-libhangul.gschema.xml
modules/engines/nimf-m17n/: Makefile.am  meson.build  nimf-m17n-am.c  nimf-m17n-ar.c  nimf-m17n-as.c  nimf-m17n-ath.c  nimf-m17n-be.c  nimf-m17n-bla.c  nimf-m17n-bn.c  nimf-m17n-bo.c  nimf-m17n-cmc.c  nimf-m17n-cr.c  nimf-m17n-cs.c  nimf-m17n-da.c  nimf-m17n-dv.c  nimf-m17n-el.c  nimf-m17n-en.c  nimf-m17n-eo.c  nimf-m17n-fa.c  nimf-m17n-fr.c  nimf-m17n-grc.c  nimf-m17n-gu.c  nimf-m17n-he.c  nimf-m17n-hi.c  (+45 more)
modules/services/: Makefile.am
settings/: Makefile.am  nimf-settings.c
(+227 files in other folders)
